# djangoEbookStore

./: .bandit.yaml  .envfile  README.md  manage.py  profile.yaml  pyproject.toml  pytest.ini
appcart/: apps.py  cart.py  urls.py  views.py
appmain/: forms.py  urls.py  views.py
apporder/: admin.py  apps.py  models.py  views.py
apporder/migrations/: 0001_initial.py
appproduct/: apps.py  models.py  views.py
appproduct/migrations/: 0001_initial.py
djangoEbookStore/: asgi.py  settings.py  urls.py  wsgi.py
templates/appcart/: cart.html  checkout.html  success.html
templates/appcart/add_ons/: cart_item.html
templates/appmain/: base.html  edit_myaccount.html  index.html  login.html  myaccount.html  shop.html  signup.html
templates/appproduct/: product.html
templates/appproduct/add-ons/: product_list_item.html
