[tool.poetry]
name = "djangoebookstore"
version = "0.1.0"
description = ""
authors = ["vikornienko <vikornienko76@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
python-dotenv = "^0.21.0"
sentry-sdk = "^1.11.1"
pillow = "^9.3.0"
stripe = "^5.0.0"


[tool.poetry.group.dev.dependencies]
prospector = {extras = ["with-bandit"], version = "^1.8.2"}
pytest-playwright = "^0.3.0"
black = "^22.10.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
